--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -248,7 +248,7 @@
                     </button>
                     <div class="text-center small text-muted">
                         <span>Already have an account? </span>
-                        <a href="login.html" class="small fw-medium link-green">Login</a>
+                        <a href="log-in.html" class="small fw-medium link-green">Login</a>
                     </div>
                 </form>
             </div>
