--- a/pages/complete-mentor-profile.html
+++ b/pages/complete-mentor-profile.html
@@ -257,7 +257,7 @@
                     </div>
                     
                     <button type="submit" class="btn-submit mb-3" id="submitButton">
-                        <span id="submitText">Complete Profile</span>
+                        <span id="submitText">Complete Profile, please verify through email too</span>
                         <span id="submitSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
                     </button>
                 </form>
@@ -463,7 +463,7 @@
                 // Show success message and redirect
                 showSuccess('Profile completed successfully! Redirecting...');
                 setTimeout(() => {
-                    window.location.href = 'mentor-dashboard.html';
+                    window.location.href = 'log-in.html';
                 }, 2000);
                 
             } catch (error) {
@@ -505,6 +505,34 @@
             successElement.textContent = message;
             successElement.style.display = 'block';
         }
+
+
+        // Create public mentor profile
+const publicMentorData = {
+    fullName: profileData.fullName,
+    profession: profileData.profession,
+    company: profileData.company,
+    experience: profileData.experience,
+    highestQualification: profileData.highestQualification,
+    expertise: profileData.expertise,
+    bio: profileData.bio,
+    linkedin: profileData.linkedin,
+    profilePicture: profileData.profilePicture || '',
+    messagingId: profileData.messagingId
+};
+
+database.ref('publicMentors/' + user.uid).set(publicMentorData)
+.then(() => {
+    // Continue with success flow
+    showSuccess('Profile completed successfully! Redirecting...');
+    setTimeout(() => {
+        window.location.href = 'log-in.html';
+    }, 2000);
+})
+.catch((error) => {
+    console.error('Error creating public profile:', error);
+    showError('Error creating public profile. Please try again.');
+});
     </script>
 </body>
 </html>
