--- a/pages/mentor-profile.html
+++ b/pages/mentor-profile.html
@@ -337,7 +337,7 @@
         function logout() {
             auth.signOut().then(() => {
                 // Sign-out successful
-                window.location.href = 'login.html';
+                window.location.href = 'log-in.html';
             }).catch((error) => {
                 // An error happened
                 console.error('Logout error:', error);
