--- a/pages/career-recommendations.html
+++ b/pages/career-recommendations.html
@@ -166,7 +166,7 @@
             <div id="fileName" class="file-name">No file selected</div>
             
             <div class="mt-3">
-                <a href="https://career-recommender-api-1.onrender.com" 
+                <a href="https://career-api-lq6d.onrender.com" 
                    class="btn btn-outline-success me-2" target="_blank">
                     <i data-lucide="clipboard-list" class="me-1"></i> Retake Assessment
                 </a>
