--- a/pages/mentor-homepage.html
+++ b/pages/mentor-homepage.html
@@ -607,7 +607,7 @@
                     <i data-lucide="calendar" class="icon"></i>
                     <span>Sessions</span>
                 </a>
-                <a href="#" class="sidebar-link">
+                <a href="mentor-resource.html" class="sidebar-link">
                     <i data-lucide="bookmark" class="icon"></i>
                     <span>Resources</span>
                 </a>
