--- a/pages/student-programs.html
+++ b/pages/student-programs.html
@@ -746,6 +746,10 @@
                     <i data-lucide="graduation-cap" class="icon"></i>
                     <span>Short Courses</span>
                 </a>
+                <a href="student-resources.html" class="sidebar-link ">
+                    <i data-lucide="book" class="icon"></i>
+                    <span>Resources</span>
+                </a>
                 <a href="student-message.html" class="sidebar-link">
                     <i data-lucide="message-square" class="icon"></i>
                     <span>Discussion</span>
