--- a/pages/student-homepage.html
+++ b/pages/student-homepage.html
@@ -637,7 +637,7 @@
                     <span>Discussion</span>
                 </a>
                 
-                <a href="#" class="sidebar-link">
+                <a href="chatbot.html" class="sidebar-link">
                     <i data-lucide="bot" class="icon"></i>
                     <span>CareerBot</span>
                 </a>
